@@ -1,3 +1,7 @@
+2009-07-04  David Sedeño <david@alderia.com>
+
+	* src/main_window.c: Fix drag'n'drop freeze.
+
 2009-06-30  David Sedeño <david@alderia.com>
 
   * data/gwget.ui: Set button size to menu. Fixes #527818
